--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@tailwindcss/forms": "^0.4.0",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
@@ -14,7 +15,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
+    "react-scroll-to-top": "^1.0.8",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
